# pixhawk-gcs-lite

./: .gitignore  PRIVACY.md  README.md  THEME_SHOWCASE.md  apk
.github/workflows/: zip-android.yml
android/: build.gradle  gradle.properties  local.properties.template  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/saiprasadtech/pixhawkgcslite/: MainActivity.kt
android/app/src/main/java/com/saiprasadtech/pixhawkgcslite/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
qml-bda-lab/: CMakeLists.txt  THEME.md
qml-bda-lab/qml/: main.qml
qml-bda-lab/qml/theme/: Theme.qml
qml-bda-lab/resources/fonts/: dummy.txt
qml-bda-lab/src/: main.cpp
